traefik/internal/prod/linkerd.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute

metadata:
  name: linkerd-ingress
  namespace: linkerd-viz

spec:
  entryPoints:
    - web

  routes:
    - kind: Rule
      match: Host(`linkerd.emc`)
      services:
        - name: web
          port: 8084
      middlewares:
        - name: l5d-header
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: l5d-header
  namespace: linkerd-viz
spec:
  headers:
    customRequestHeaders:
      Host: "web.linkerd-viz.svc.cluster.local:8084"
      Origin: ""
